# old-phalanx

./: .gitignore  CHANGES.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  index.dockerfile
.github/workflows/: periodic.yml  regression.yml
examples/: bulk_delete.jsonl  bulk_put.jsonl  doc_1.json  doc_2.json  schema.json  search_request.json  search_request_with_facet.json
phalanx/: Cargo.toml  README.md
phalanx-client/: Cargo.toml
phalanx-client/examples/: client.rs  client_bulk_delete.rs  client_bulk_put.rs  client_commit.rs  client_delete.rs  client_get.rs  client_merge.rs  client_metadata.rs  client_put.rs  client_readiness.rs  client_rollback.rs  client_search.rs
phalanx-client/src/: client.rs  index.rs
phalanx-common/: Cargo.toml
phalanx-common/src/: error.rs  lib.rs  path.rs  signal.rs
phalanx-discovery/: Cargo.toml  README.md
phalanx-discovery/src/: discovery.rs  lib.rs  main.rs  watcher.rs
phalanx-discovery/src/discovery/: etcd.rs  nop.rs  null.rs
phalanx-discovery/src/overseer/: overseer.rs
phalanx-discovery/src/server/: grpc.rs  http.rs
phalanx-dispatcher/: Cargo.toml
phalanx-dispatcher/src/: lib.rs  watcher.rs
phalanx-dispatcher/src/server/: grpc.rs
phalanx-index/: Cargo.toml  README.md
phalanx-index/src/: index.rs  lib.rs  main.rs  watcher.rs
phalanx-index/src/index/: config.rs  search_request.rs  search_result.rs  watcher.rs
phalanx-index/src/server/: grpc.rs  http.rs
phalanx-index/src/tokenizer/: alpha_num_only_filter_factory.rs  cang_jie_tokenizer_factory.rs  lindera_tokenizer_factory.rs  lower_case_filter_factory.rs  ngram_tokenizer_factory.rs  remove_long_filter_factory.rs  stemming_filter_factory.rs  stop_word_filter_factory.rs  tokenizer_initializer.rs
phalanx-kvs/: Cargo.toml
phalanx-kvs/src/: kvs.rs
phalanx-kvs/src/kvs/: etcd.rs  nop.rs
phalanx-overseer/: Cargo.toml  README.md
phalanx-overseer/src/: lib.rs  main.rs  overseer.rs
phalanx-overseer/src/overseer/: overseer.rs
phalanx-overseer/src/server/: grpc.rs  http.rs
phalanx-proto/: Cargo.toml  build.rs
phalanx-proto/proto/: discovery.proto  index.proto  phalanx.proto
phalanx-proto/src/: lib.rs
phalanx-server/: Cargo.toml  README.md
phalanx-server/src/: index.rs  lib.rs  main.rs  storage.rs
phalanx-server/src/index/: server.rs
phalanx-storage/: Cargo.toml
phalanx-storage/src/: storage.rs
phalanx-storage/src/storage/: minio.rs  nop.rs  null.rs
phalanx/src/: command.rs  main.rs
phalanx/src/command/: discovery.rs  dispatcher.rs  index.rs  overseer.rs
