[package]
name = "phalanx-client"
version = "0.1.0"
authors = ["Minoru Osuka <minoru.osuka@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7"
tokio = { version = "0.2", features = [ "full" ] }
tonic = "0.3"
phalanx-common = { version = "0.1.0", path = "../phalanx-common" }
phalanx-proto = { version = "0.1.0", path = "../phalanx-proto" }
