[package]
name = "phalanx-discovery"
version = "0.1.0"
authors = ["Minoru Osuka <minoru.osuka@gmail.com>"]
edition = "2018"

[dependencies]
async-std = "1.6.1"
async-trait = "0.1.36"
etcd-client = "0.5.3"
log = "0.4.8"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
#tokio = { version = "0.2.21", features = [ "full" ] }
