[package]
name = "phalanx-discovery"
version = "0.1.0"
authors = ["Minoru Osuka <minoru.osuka@gmail.com>"]
edition = "2018"

[dependencies]
async-std = "1.6.1"
async-trait = "0.1.36"
etcd-client = "0.5.3"
clap = "2.33.0"
crossbeam-channel = "0.4.2"
futures-util = "0.3.5"
hyper = "0.13.5"
lazy_static = "1.4.0"
log = "0.4.8"
prometheus = "0.8.0"
serde_json = "1.0.51"
tokio = { version = "0.2.21", features = [ "full" ] }
tonic = "0.2.1"

phalanx-common = { version = "0.1.0", path = "../phalanx-common" }
phalanx-proto = { version = "0.1.0", path = "../phalanx-proto" }
