[package]
name = "phalanx-index"
version = "0.1.0"
authors = ["Minoru Osuka <minoru.osuka@gmail.com>"]
edition = "2018"

[[bin]]
name = "phalanx-index"
path = "src/main.rs"

[dependencies]
async-std = "1.6"
cang-jie = "0.10"
clap = "2.33.0"
cloud-storage = "0.6"
dyn-clone = "1.0"
futures-util = "0.3"
hyper = "0.13"
jieba-rs = "0.6"
lazy_static = "1.4"
lindera-tantivy = "0.2"
log = "0.4"
num_cpus = "1.13"
prometheus = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = "0.13"
tokio = { version = "0.2", features = [ "full" ] }
tonic = "0.3"
walkdir = "2.3"

phalanx-common = { version = "0.1.0", path = "../phalanx-common" }
phalanx-discovery = { version = "0.1.0", path = "../phalanx-discovery" }
phalanx-proto = { version = "0.1.0", path = "../phalanx-proto" }
phalanx-storage = { version = "0.1.0", path = "../phalanx-storage" }
