[package]
name = "phalanx-index"
version = "0.1.0"
authors = ["Minoru Osuka <minoru.osuka@gmail.com>"]
edition = "2018"

[dependencies]
#cang-jie = "0.10"
cang-jie = { git = "https://github.com/mosuka/cang-jie", branch = "upgrade_tantivy" }
crossbeam = "0.8"
hyper = "0.13"
jieba-rs = "0.6"
lazy_static = "1.4"
#lindera-tantivy = "0.7"
lindera-tantivy = { git = "https://github.com/mosuka/lindera-tantivy", branch = "upgrade_tantivy" }
log = "0.4"
notify = "5.0.0-pre.4"
num_cpus = "1.13"
prometheus = "0.10"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#tantivy = "0.13"
tantivy = { git = "https://github.com/mosuka/tantivy", branch = "deserializable" }
tokio = { version = "0.2", features = [ "full" ] }
tonic = "0.3"
walkdir = "2.3"

phalanx-discovery = { version = "0.1.0", path = "../phalanx-discovery" }
phalanx-proto = { version = "0.1.0", path = "../phalanx-proto" }
phalanx-storage = { version = "0.1.0", path = "../phalanx-storage" }
