[package]
name = "phalanx-kvs"
version = "0.1.0-dev"
authors = ["Minoru Osuka <minoru.osuka@gmail.com>"]
edition = "2018"

[dependencies]
async-std = "1.6"
async-trait = "0.1"
etcd-rs = "0.3"
clap = "2.33"
crossbeam = "0.8"
dyn-clone = "1.0"
lazy_static = "1.4"
log = "0.4"
prometheus = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = [ "full" ] }
tonic = "0.3"
