[package]
name = "phalanx-overseer"
version = "0.1.0"
authors = ["Minoru Osuka <minoru.osuka@gmail.com>"]
edition = "2018"

[[bin]]
name = "phalanx-overseer"
path = "src/main.rs"

[dependencies]
clap = "2.33"
hyper = "0.13"
log = "0.4"
prometheus = "0.10"
tokio = { version = "0.2", features = [ "full" ] }

phalanx-common = { version = "0.1.0", path = "../phalanx-common" }
phalanx-discovery = { version = "0.1.0", path = "../phalanx-discovery" }
