[package]
name = "phalanx-overseer"
version = "0.1.0"
authors = ["Minoru Osuka <minoru.osuka@gmail.com>"]
edition = "2018"

[dependencies]
crossbeam = "0.8"
hyper = "0.13"
lazy_static = "1.4"
log = "0.4"
prometheus = "0.10"
regex = "1.3"
serde_json = "1.0"
tokio = { version = "0.2", features = [ "full" ] }
tonic = "0.3"

phalanx-discovery = { version = "0.1.0", path = "../phalanx-discovery" }
phalanx-proto = { version = "0.1.0", path = "../phalanx-proto" }
