[package]
name = "phalanx-storage"
version = "0.1.0"
authors = ["Minoru Osuka <minoru.osuka@gmail.com>"]
edition = "2018"

[dependencies]
async-std = "1.6"
async-trait = "0.1"
log = "0.4"
rusoto_core = "0.45"
rusoto_s3 = "0.45"
serde_json = "1.0"
tantivy = "0.13"
tokio = { version = "0.2", features = [ "full" ] }
walkdir = "2.3"

phalanx-common = { version = "0.1.0", path = "../phalanx-common" }
