[package]
name = "phalanx"
version = "0.1.0"
authors = ["Minoru Osuka <minoru.osuka@gmail.com>"]
edition = "2018"
description = "Phalanx: Cloud based Index Workload Service"

[[bin]]
name = "phalanx"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = "2.33"
hyper = "0.13"
log = "0.4"
num_cpus = "1.13"
serde_json = "1.0"
tokio = { version = "0.2", features = [ "full" ] }
tonic = "0.3"

phalanx-common = { version = "0.1.0", path = "../phalanx-common" }
phalanx-kvs = { version = "0.1.0", path = "../phalanx-kvs" }
phalanx-discovery =  { version = "0.1.0", path = "../phalanx-discovery" }
phalanx-dispatcher = { version = "0.1.0", path = "../phalanx-dispatcher" }
phalanx-index = { version = "0.1.0", path = "../phalanx-index" }
phalanx-proto = { version = "0.1.0", path = "../phalanx-proto" }
phalanx-storage = { version = "0.1.0", path = "../phalanx-storage" }
